[package]
name = "resolvers"
version = "0.0.1"
description = "GraphQL resolvers written in Rust"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
gloo-console = "0.2"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 's'
